style: light & dark mode color fixes

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -7,9 +7,14 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+:root {
+    --background-color-dark: rgb(16, 27, 42);
+    --text-color-light: dark;
+    --background-color-light: white; /* Change this to the appropriate dark mode color */
+    --text-color-light: black; /* Change this to the appropriate dark mode color */
+}
 body {
-    background-color: rgb(16, 27, 42);
+    background-color: var(--background-color-dark);
     color: white;
 }
 
